updated a new function to the code

--- a/0.0 Testing GPU.ipynb
+++ b/0.0 Testing GPU.ipynb
@@ -2,9 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tensor Flow Version: 2.9.0\n",
+      "Keras Version: 2.9.0\n",
+      "\n",
+      "Python 3.8.16 (default, Mar  2 2023, 03:18:16) [MSC v.1916 64 bit (AMD64)]\n",
+      "Pandas 1.5.3\n",
+      "Scikit-Learn 1.2.1\n",
+      "GPU is available\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "\n",
@@ -24,9 +38,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Default GPU Device: /device:GPU:0\n"
+     ]
+    }
+   ],
    "source": [
     "import tensorflow as tf \n",
     "if tf.test.gpu_device_name(): \n",
