--- a/1.0 Image collection.ipynb
+++ b/1.0 Image collection.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,10 @@
     "import time\n",
     "\n",
     "# Import Numpy\n",
-    "import numpy as np\n"
+    "import numpy as np\n",
+    "\n",
+    "#import glob\n",
+    "import glob\n"
    ]
   },
   {
@@ -38,15 +41,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create a list of labels for the different hand gestures\n",
-    "labels = ['thumbsup', 'thumbsdown', 'thankyou', 'livelong']\n",
+    "# Create a list of labels for the different classes\n",
+    "labels = ['PNDL-OK', 'PNDL-X', 'DFLM-OK', 'DFLM-X', 'ZRTC-OK','ZRTC-X', 'BLXTN-OK', 'BLXTN-X', 'BRKA-OK', 'BRKA-X']\n",
     "\n",
-    "# Specify the number of images to capture for each hand gesture\n",
-    "number_imgs = 5"
+    "# Specify the number of images to capture for each \n",
+    "number_imgs = 3"
    ]
   },
   {
@@ -58,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +96,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 4. Capture Images"
+    "### 4. Capture Images using camera"
    ]
   },
   {
@@ -105,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,59 +116,65 @@
     "frameWidth = 1024\n",
     "frameHeight = 576\n",
     "\n",
-    "\n",
     "# Initialize a video capture object with the default camera (index 0)\n",
     "cap = cv2.VideoCapture(0)\n",
     "\n",
     "# Check if the camera was opened successfully\n",
     "if not cap.isOpened():\n",
     "    print(\"Unable to open camera\")\n",
-    "    exit()\n",
-    "    \n",
-    "# Sets the capture resolution \n",
-    "cap.set(cv2.CAP_PROP_FPS, 60)\n",
+    "else:\n",
+    "    # Sets the capture resolution \n",
+    "    cap.set(cv2.CAP_PROP_FPS, 60)\n",
     "\n",
-    "# Loop over the frames captured from the video capture object\n",
-    "while True:\n",
-    "    # Read a single frame from the video capture object\n",
-    "    ret, img = cap.read()\n",
-    "    \n",
-    "    # Check if the frame was read successfully\n",
-    "    if not ret:\n",
-    "        print(\"Failed to read frame\")\n",
-    "        break\n",
-    "    \n",
-    "    img = cv2.resize(img, (frameWidth, frameHeight))\n",
-    "    # Display the resulting frame in a window with the title \"Result\"\n",
-    "    cv2.imshow(\"Result\", img)\n",
-    "    \n",
-    "    # Wait for a key press event for 125s\n",
-    "    key = cv2.waitKey(125)\n",
-    "    \n",
-    "    \n",
-    "    # Exit the loop if the 'q' key or the 'Esc' key is pressed\n",
-    "    if key == ord('q') or key == 27:  # 27 is the ASCII code for the 'Esc' key\n",
-    "        break\n",
+    "    # Loop over the frames captured from the video capture object\n",
+    "    while True:\n",
+    "        # Read a single frame from the video capture object\n",
+    "        ret, img = cap.read()\n",
     "\n",
-    "# Release the video capture object\n",
-    "cap.release()\n",
+    "        # Check if the frame was read successfully\n",
+    "        if not ret:\n",
+    "            print(\"Failed to read frame\")\n",
+    "            break\n",
+    "\n",
+    "        img = cv2.resize(img, (frameWidth, frameHeight))\n",
+    "        # Display the resulting frame in a window with the title \"Result\"\n",
+    "        cv2.imshow(\"Result\", img)\n",
+    "\n",
+    "        # Wait for a key press event for 125ms\n",
+    "        key = cv2.waitKey(125)\n",
+    "\n",
+    "        # Exit the loop if the 'q' key or the 'Esc' key is pressed\n",
+    "        if key == ord('q') or key == 27:  # 27 is the ASCII code for the 'Esc' key\n",
+    "            break\n",
+    "\n",
+    "    # Release the video capture object\n",
+    "    cap.release()\n",
     "\n",
     "# Close all windows opened by OpenCV\n",
     "cv2.destroyAllWindows()\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 4.1.1 Manual capture image"
+    "#### 4.1.1 Manual capture image (optional if you want to add a singular data manually into a desired folder)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Image saved as Tensorflow\\workspace\\images\\collectedimages\\BLXTN-X\\BLXTN-X.abe11d38-ce1c-11ed-b00e-44af2861d338.jpg\n"
+     ]
+    }
+   ],
    "source": [
     "# Set the desired frame width and height\n",
     "frameWidth = 1024\n",
@@ -187,7 +196,7 @@
     "cap = cv2.VideoCapture(0)\n",
     "if not cap.isOpened():\n",
     "    print(\"Failed to open the camera.\")\n",
-    "    exit()\n",
+    "    raise SystemExit(1)\n",
     "    \n",
     "# Sets the capture resolution \n",
     "cap.set(cv2.CAP_PROP_FPS, 60)\n",
@@ -297,9 +306,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting images for PNDL-OK\n",
+      "Press 'r' to start image collection for PNDL-OK\n",
+      "Collecting image number 1\n",
+      "Image saved as Tensorflow\\workspace\\images\\collectedimages\\PNDL-OK\\PNDL-OK.23c99e50-ce1b-11ed-beff-44af2861d338.jpg\n",
+      "Collecting image number 2\n",
+      "Image saved as Tensorflow\\workspace\\images\\collectedimages\\PNDL-OK\\PNDL-OK.26e199cc-ce1b-11ed-8356-44af2861d338.jpg\n",
+      "Collecting image number 3\n",
+      "Image saved as Tensorflow\\workspace\\images\\collectedimages\\PNDL-OK\\PNDL-OK.29faef09-ce1b-11ed-bc78-44af2861d338.jpg\n",
+      "Collecting images for PNDL-X\n",
+      "Press 'r' to start image collection for PNDL-X\n",
+      "Collecting image number 1\n",
+      "Image saved as Tensorflow\\workspace\\images\\collectedimages\\PNDL-X\\PNDL-X.34588f06-ce1b-11ed-a242-44af2861d338.jpg\n",
+      "Collecting image number 2\n",
+      "Image saved as Tensorflow\\workspace\\images\\collectedimages\\PNDL-X\\PNDL-X.376f03c2-ce1b-11ed-ad07-44af2861d338.jpg\n",
+      "Collecting image number 3\n",
+      "Image saved as Tensorflow\\workspace\\images\\collectedimages\\PNDL-X\\PNDL-X.3a85839e-ce1b-11ed-8c72-44af2861d338.jpg\n",
+      "Collecting images for DFLM-OK\n",
+      "Press 'r' to start image collection for DFLM-OK\n",
+      "Collecting image number 1\n",
+      "Image saved as Tensorflow\\workspace\\images\\collectedimages\\DFLM-OK\\DFLM-OK.4a1bf6f4-ce1b-11ed-95cf-44af2861d338.jpg\n",
+      "Collecting image number 2\n",
+      "Image saved as Tensorflow\\workspace\\images\\collectedimages\\DFLM-OK\\DFLM-OK.4d32b370-ce1b-11ed-a714-44af2861d338.jpg\n",
+      "Collecting image number 3\n",
+      "Image saved as Tensorflow\\workspace\\images\\collectedimages\\DFLM-OK\\DFLM-OK.5049a3be-ce1b-11ed-9420-44af2861d338.jpg\n",
+      "Collecting images for DFLM-X\n",
+      "Press 'r' to start image collection for DFLM-X\n",
+      "Collecting image number 1\n",
+      "Image saved as Tensorflow\\workspace\\images\\collectedimages\\DFLM-X\\DFLM-X.7e929ac2-ce1b-11ed-9e32-44af2861d338.jpg\n",
+      "Collecting image number 2\n",
+      "Image saved as Tensorflow\\workspace\\images\\collectedimages\\DFLM-X\\DFLM-X.81ab52d8-ce1b-11ed-880a-44af2861d338.jpg\n",
+      "Collecting image number 3\n",
+      "Image saved as Tensorflow\\workspace\\images\\collectedimages\\DFLM-X\\DFLM-X.84c29752-ce1b-11ed-a6bd-44af2861d338.jpg\n",
+      "Collecting images for ZRTC-OK\n",
+      "Press 'r' to start image collection for ZRTC-OK\n",
+      "Collecting image number 1\n",
+      "Image saved as Tensorflow\\workspace\\images\\collectedimages\\ZRTC-OK\\ZRTC-OK.9b1826ec-ce1b-11ed-aa7d-44af2861d338.jpg\n",
+      "Collecting image number 2\n",
+      "Image saved as Tensorflow\\workspace\\images\\collectedimages\\ZRTC-OK\\ZRTC-OK.9e2f2d94-ce1b-11ed-8045-44af2861d338.jpg\n",
+      "Collecting image number 3\n",
+      "Image saved as Tensorflow\\workspace\\images\\collectedimages\\ZRTC-OK\\ZRTC-OK.a147c8ef-ce1b-11ed-a94a-44af2861d338.jpg\n",
+      "Collecting images for ZRTC-X\n",
+      "Press 'r' to start image collection for ZRTC-X\n",
+      "Collecting image number 1\n",
+      "Image saved as Tensorflow\\workspace\\images\\collectedimages\\ZRTC-X\\ZRTC-X.ac9e2bca-ce1b-11ed-b8f9-44af2861d338.jpg\n",
+      "Collecting image number 2\n",
+      "Image saved as Tensorflow\\workspace\\images\\collectedimages\\ZRTC-X\\ZRTC-X.afb3eb66-ce1b-11ed-a100-44af2861d338.jpg\n",
+      "Collecting image number 3\n",
+      "Image saved as Tensorflow\\workspace\\images\\collectedimages\\ZRTC-X\\ZRTC-X.b2cb3d7b-ce1b-11ed-9730-44af2861d338.jpg\n",
+      "Collecting images for BLXTN-OK\n",
+      "Press 'r' to start image collection for BLXTN-OK\n",
+      "Collecting image number 1\n",
+      "Image saved as Tensorflow\\workspace\\images\\collectedimages\\BLXTN-OK\\BLXTN-OK.d90cf199-ce1b-11ed-a973-44af2861d338.jpg\n",
+      "Collecting image number 2\n",
+      "Image saved as Tensorflow\\workspace\\images\\collectedimages\\BLXTN-OK\\BLXTN-OK.dc2473b4-ce1b-11ed-b1fb-44af2861d338.jpg\n",
+      "Collecting image number 3\n",
+      "Image saved as Tensorflow\\workspace\\images\\collectedimages\\BLXTN-OK\\BLXTN-OK.df3bf069-ce1b-11ed-99e2-44af2861d338.jpg\n",
+      "Collecting images for BLXTN-X\n",
+      "Press 'r' to start image collection for BLXTN-X\n",
+      "Collecting image number 1\n",
+      "Image saved as Tensorflow\\workspace\\images\\collectedimages\\BLXTN-X\\BLXTN-X.eacfc94d-ce1b-11ed-be82-44af2861d338.jpg\n",
+      "Collecting image number 2\n",
+      "Image saved as Tensorflow\\workspace\\images\\collectedimages\\BLXTN-X\\BLXTN-X.ede89045-ce1b-11ed-94a1-44af2861d338.jpg\n",
+      "Collecting image number 3\n",
+      "Image saved as Tensorflow\\workspace\\images\\collectedimages\\BLXTN-X\\BLXTN-X.f0ffef20-ce1b-11ed-abc3-44af2861d338.jpg\n",
+      "Collecting images for BRKA-OK\n",
+      "Press 'r' to start image collection for BRKA-OK\n",
+      "Collecting image number 1\n",
+      "Image saved as Tensorflow\\workspace\\images\\collectedimages\\BRKA-OK\\BRKA-OK.233aa019-ce1c-11ed-ab2b-44af2861d338.jpg\n",
+      "Collecting image number 2\n",
+      "Image saved as Tensorflow\\workspace\\images\\collectedimages\\BRKA-OK\\BRKA-OK.26516a00-ce1c-11ed-a8aa-44af2861d338.jpg\n",
+      "Collecting image number 3\n",
+      "Image saved as Tensorflow\\workspace\\images\\collectedimages\\BRKA-OK\\BRKA-OK.296a7cae-ce1c-11ed-a6a1-44af2861d338.jpg\n",
+      "Collecting images for BRKA-X\n",
+      "Press 'r' to start image collection for BRKA-X\n",
+      "Collecting image number 1\n",
+      "Image saved as Tensorflow\\workspace\\images\\collectedimages\\BRKA-X\\BRKA-X.371fa849-ce1c-11ed-80e5-44af2861d338.jpg\n",
+      "Collecting image number 2\n",
+      "Image saved as Tensorflow\\workspace\\images\\collectedimages\\BRKA-X\\BRKA-X.3a36b596-ce1c-11ed-857c-44af2861d338.jpg\n",
+      "Collecting image number 3\n",
+      "Image saved as Tensorflow\\workspace\\images\\collectedimages\\BRKA-X\\BRKA-X.3d4dd75f-ce1c-11ed-ac59-44af2861d338.jpg\n",
+      "Collecting images for BSO-OK\n",
+      "Press 'r' to start image collection for BSO-OK\n"
+     ]
+    }
+   ],
    "source": [
     "# Set frame dimensions\n",
     "frameWidth = 1024\n",
@@ -318,7 +416,7 @@
     "cap = cv2.VideoCapture(0)\n",
     "if not cap.isOpened():\n",
     "    print(\"Failed to open the camera.\")\n",
-    "    exit()\n",
+    "    raise SystemExit(1)\n",
     "    \n",
     "# Sets the capture resolution \n",
     "cap.set(cv2.CAP_PROP_FPS, 60)\n",
@@ -458,6 +556,101 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 6.0 splitting the image (for each capsule)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def click_and_crop(event, x, y, flags, param):\n",
+    "    global ref_point, cropping\n",
+    "    image = param\n",
+    "\n",
+    "    if event == cv2.EVENT_LBUTTONDOWN:\n",
+    "        ref_point = [(x, y)]\n",
+    "        cropping = True\n",
+    "\n",
+    "    elif event == cv2.EVENT_LBUTTONUP:\n",
+    "        ref_point.append((x, y))\n",
+    "        cropping = False\n",
+    "\n",
+    "        cv2.rectangle(image, ref_point[0], ref_point[1], (0, 255, 0), 2)\n",
+    "        cv2.imshow(\"image\", image)\n",
+    "\n",
+    "def process_image(input_image_path, output_folder):\n",
+    "    image = cv2.imread(input_image_path)\n",
+    "    clone = image.copy()\n",
+    "\n",
+    "    cv2.namedWindow(\"image\")\n",
+    "    cv2.setMouseCallback(\"image\", click_and_crop, param=image)\n",
+    "\n",
+    "    # Create a separate image for displaying instructions\n",
+    "    instruction_image = np.zeros((80, 560, 3), dtype=np.uint8)\n",
+    "    instructions1 = \"r - Reset image | s - Save image | q - Exit to next image\"\n",
+    "    instructions2 = \"ESC - Exit program\"\n",
+    "    cv2.putText(instruction_image, instructions1, (10, 25), cv2.FONT_HERSHEY_SIMPLEX, 0.5, (255, 255, 255), 1)\n",
+    "    cv2.putText(instruction_image, instructions2, (10, 55), cv2.FONT_HERSHEY_SIMPLEX, 0.5, (255, 255, 255), 1)\n",
+    "    cv2.imshow(\"instructions\", instruction_image)\n",
+    "\n",
+    "    while True:\n",
+    "        cv2.imshow(\"image\", image)\n",
+    "        key = cv2.waitKey(1) & 0xFF\n",
+    "\n",
+    "        if key == ord(\"r\"):\n",
+    "            image = clone.copy()\n",
+    "\n",
+    "        elif key == ord(\"s\"):\n",
+    "            break\n",
+    "\n",
+    "        elif key == ord(\"q\") or key == 27:  # \"q\" or \"esc\" key press\n",
+    "            cv2.destroyAllWindows()\n",
+    "            if key == 27:\n",
+    "                return \"exit\"\n",
+    "            return\n",
+    "\n",
+    "    roi_list = []\n",
+    "    if len(ref_point) > 1:\n",
+    "        for i in range(len(ref_point)//2):\n",
+    "            roi = clone[ref_point[2*i][1]:ref_point[2*i+1][1], ref_point[2*i][0]:ref_point[2*i+1][0]]\n",
+    "            roi_list.append(roi)\n",
+    "\n",
+    "    if not os.path.exists(output_folder):\n",
+    "        os.makedirs(output_folder)\n",
+    "\n",
+    "    filename, file_extension = os.path.splitext(os.path.basename(input_image_path))\n",
+    "\n",
+    "    for i, roi in enumerate(roi_list):\n",
+    "        output_filename = os.path.join(output_folder, f\"{filename}_{i}{file_extension}\")\n",
+    "        cv2.imwrite(output_filename, roi)\n",
+    "\n",
+    "    cv2.destroyAllWindows()\n",
+    "\n",
+    "IMAGES_PATH = os.path.join('Tensorflow', 'workspace', 'images', 'collectedimages')\n",
+    "image_extensions = [\"*.jpg\", \"*.jpeg\", \"*.png\"]\n",
+    "\n",
+    "result = None\n",
+    "for root, dirs, files in os.walk(IMAGES_PATH):\n",
+    "    for extension in image_extensions:\n",
+    "        for image_file in glob.glob(os.path.join(root, extension)):\n",
+    "            output_folder = os.path.join(root, \"highlighted_parts\")\n",
+    "            result = process_image(image_file, output_folder)\n",
+    "            if result == \"exit\":\n",
+    "                break\n",
+    "        if result == \"exit\":\n",
+    "            break\n",
+    "    if result == \"exit\":\n",
+    "        break"
+   ]
+  },
+  {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -466,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -475,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -486,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -498,13 +691,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Opens label image package\n",
     "!cd {LABELIMG_PATH} && python labelImg.py"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
