--- a/1.0 Image collection.ipynb
+++ b/1.0 Image collection.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -560,31 +560,43 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 6.0 splitting the image (for each capsule)"
+    "### 5.0 splitting the image for each capsule (only if we want to the images further)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Done.\n"
+     ]
+    }
+   ],
    "source": [
     "def click_and_crop(event, x, y, flags, param):\n",
     "    global ref_point, cropping\n",
     "    image = param\n",
     "\n",
     "    if event == cv2.EVENT_LBUTTONDOWN:\n",
-    "        ref_point = [(x, y)]\n",
-    "        cropping = True\n",
+    "        if not cropping:  \n",
+    "            ref_point.append((x, y))\n",
+    "            cropping = True\n",
     "\n",
     "    elif event == cv2.EVENT_LBUTTONUP:\n",
-    "        ref_point.append((x, y))\n",
-    "        cropping = False\n",
+    "        if cropping:  \n",
+    "            ref_point.append((x, y))\n",
+    "            cropping = False\n",
     "\n",
-    "        cv2.rectangle(image, ref_point[0], ref_point[1], (0, 255, 0), 2)\n",
-    "        cv2.imshow(\"image\", image)\n",
+    "            cv2.rectangle(image, ref_point[-2], ref_point[-1], (0, 255, 0), 2)\n",
+    "            cv2.imshow(\"image\", image)\n",
     "\n",
     "def process_image(input_image_path, output_folder):\n",
+    "    global ref_point, cropping \n",
+    "    ref_point = []  # Define ref_point as an empty list\n",
     "    image = cv2.imread(input_image_path)\n",
     "    clone = image.copy()\n",
     "\n",
@@ -605,10 +617,20 @@
     "\n",
     "        if key == ord(\"r\"):\n",
     "            image = clone.copy()\n",
+    "            ref_point = []\n",
     "\n",
     "        elif key == ord(\"s\"):\n",
-    "            break\n",
-    "\n",
+    "            if len(ref_point) >= 2:\n",
+    "                if not os.path.exists(output_folder):\n",
+    "                    os.makedirs(output_folder)\n",
+    "                filename, file_extension = os.path.splitext(os.path.basename(input_image_path))\n",
+    "                for i in range(len(ref_point) // 2):\n",
+    "                    roi = clone[ref_point[2 * i][1]:ref_point[2 * i + 1][1], ref_point[2 * i][0]:ref_point[2 * i + 1][0]]\n",
+    "                    output_filename = os.path.join(output_folder, f\"{filename}_{i}{file_extension}\")\n",
+    "                    cv2.imwrite(output_filename, roi)\n",
+    "            else:\n",
+    "                print(\"Please select a region before saving.\")\n",
+    "                \n",
     "        elif key == ord(\"q\") or key == 27:  # \"q\" or \"esc\" key press\n",
     "            cv2.destroyAllWindows()\n",
     "            if key == 27:\n",
@@ -637,6 +659,8 @@
     "\n",
     "result = None\n",
     "for root, dirs, files in os.walk(IMAGES_PATH):\n",
+    "    if 'highlighted_parts' in root:  # Add this check\n",
+    "        continue\n",
     "    for extension in image_extensions:\n",
     "        for image_file in glob.glob(os.path.join(root, extension)):\n",
     "            output_folder = os.path.join(root, \"highlighted_parts\")\n",
@@ -646,7 +670,9 @@
     "        if result == \"exit\":\n",
     "            break\n",
     "    if result == \"exit\":\n",
-    "        break"
+    "        break\n",
+    "\n",
+    "print(\"Done.\")"
    ]
   },
   {
@@ -654,7 +680,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 5. Image Labelling using labelImg"
+    "### 6. Image Labelling using labelImg"
    ]
   },
   {
