updated some parts of the code

--- a/0.0 Testing GPU.ipynb
+++ b/0.0 Testing GPU.ipynb
@@ -1,6 +1,20 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## This is a test to see if the GPU is working\n",
+    "#### I made an enviroment.yaml file for my conda environment. \n",
+    "\n",
+    "#### I used the following command to create the environment: \n",
+    "conda env create -f environment.yaml\n",
+    "\n",
+    " btw keep in mind the correct terminal path "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
