--- a/2.0 Split images to train-test.ipynb
+++ b/2.0 Split images to train-test.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "## Usage Guide\n",
     "\n",
-    "This is designed to split a dataset of images and their corresponding XML files into training and testing sets. The dataset is organized into subfolders within a main data folder.\n",
+    "This is designed to split a dataset of images and their corresponding XML files into training and testing sets. The dataset is organized into subfolders within a main data folder. If you have used the highlight feature before this please use the part 2 of the 2.1 version\n",
     "\n",
     "### Prerequisites\n",
     "\n",
