--- a/2.1 split images (alternative).ipynb
+++ b/2.1 split images (alternative).ipynb
@@ -5,6 +5,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Part 1"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Notes\n",
     "\n",
     "- This script consideres the images that you've already split. but you still need to use this one exclusively. if you have used 2.0 this script wouldn't track the file split\n",
@@ -16,10 +24,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Image Dataset Splitter\n",
+    "## Image Dataset Splitter\n",
     "This script helps you split an image dataset into training and testing sets. It works with image files (.jpg) and their corresponding annotation files (.xml).\n",
     "\n",
-    "# Usage\n",
+    "## Usage\n",
     "1. Place your image dataset into a folder, with each subfolder containing images of a specific category. This is automatically done if you've used 1.0 Image..."
    ]
   },
@@ -240,6 +248,19 @@
     "if __name__ == \"__main__\":\n",
     "    main()\n"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Part 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
