--- a/1.0 Image collection.ipynb
+++ b/1.0 Image collection.ipynb
@@ -306,98 +306,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting images for PNDL-OK\n",
-      "Press 'r' to start image collection for PNDL-OK\n",
-      "Collecting image number 1\n",
-      "Image saved as Tensorflow\\workspace\\images\\collectedimages\\PNDL-OK\\PNDL-OK.23c99e50-ce1b-11ed-beff-44af2861d338.jpg\n",
-      "Collecting image number 2\n",
-      "Image saved as Tensorflow\\workspace\\images\\collectedimages\\PNDL-OK\\PNDL-OK.26e199cc-ce1b-11ed-8356-44af2861d338.jpg\n",
-      "Collecting image number 3\n",
-      "Image saved as Tensorflow\\workspace\\images\\collectedimages\\PNDL-OK\\PNDL-OK.29faef09-ce1b-11ed-bc78-44af2861d338.jpg\n",
-      "Collecting images for PNDL-X\n",
-      "Press 'r' to start image collection for PNDL-X\n",
-      "Collecting image number 1\n",
-      "Image saved as Tensorflow\\workspace\\images\\collectedimages\\PNDL-X\\PNDL-X.34588f06-ce1b-11ed-a242-44af2861d338.jpg\n",
-      "Collecting image number 2\n",
-      "Image saved as Tensorflow\\workspace\\images\\collectedimages\\PNDL-X\\PNDL-X.376f03c2-ce1b-11ed-ad07-44af2861d338.jpg\n",
-      "Collecting image number 3\n",
-      "Image saved as Tensorflow\\workspace\\images\\collectedimages\\PNDL-X\\PNDL-X.3a85839e-ce1b-11ed-8c72-44af2861d338.jpg\n",
-      "Collecting images for DFLM-OK\n",
-      "Press 'r' to start image collection for DFLM-OK\n",
-      "Collecting image number 1\n",
-      "Image saved as Tensorflow\\workspace\\images\\collectedimages\\DFLM-OK\\DFLM-OK.4a1bf6f4-ce1b-11ed-95cf-44af2861d338.jpg\n",
-      "Collecting image number 2\n",
-      "Image saved as Tensorflow\\workspace\\images\\collectedimages\\DFLM-OK\\DFLM-OK.4d32b370-ce1b-11ed-a714-44af2861d338.jpg\n",
-      "Collecting image number 3\n",
-      "Image saved as Tensorflow\\workspace\\images\\collectedimages\\DFLM-OK\\DFLM-OK.5049a3be-ce1b-11ed-9420-44af2861d338.jpg\n",
-      "Collecting images for DFLM-X\n",
-      "Press 'r' to start image collection for DFLM-X\n",
-      "Collecting image number 1\n",
-      "Image saved as Tensorflow\\workspace\\images\\collectedimages\\DFLM-X\\DFLM-X.7e929ac2-ce1b-11ed-9e32-44af2861d338.jpg\n",
-      "Collecting image number 2\n",
-      "Image saved as Tensorflow\\workspace\\images\\collectedimages\\DFLM-X\\DFLM-X.81ab52d8-ce1b-11ed-880a-44af2861d338.jpg\n",
-      "Collecting image number 3\n",
-      "Image saved as Tensorflow\\workspace\\images\\collectedimages\\DFLM-X\\DFLM-X.84c29752-ce1b-11ed-a6bd-44af2861d338.jpg\n",
-      "Collecting images for ZRTC-OK\n",
-      "Press 'r' to start image collection for ZRTC-OK\n",
-      "Collecting image number 1\n",
-      "Image saved as Tensorflow\\workspace\\images\\collectedimages\\ZRTC-OK\\ZRTC-OK.9b1826ec-ce1b-11ed-aa7d-44af2861d338.jpg\n",
-      "Collecting image number 2\n",
-      "Image saved as Tensorflow\\workspace\\images\\collectedimages\\ZRTC-OK\\ZRTC-OK.9e2f2d94-ce1b-11ed-8045-44af2861d338.jpg\n",
-      "Collecting image number 3\n",
-      "Image saved as Tensorflow\\workspace\\images\\collectedimages\\ZRTC-OK\\ZRTC-OK.a147c8ef-ce1b-11ed-a94a-44af2861d338.jpg\n",
-      "Collecting images for ZRTC-X\n",
-      "Press 'r' to start image collection for ZRTC-X\n",
-      "Collecting image number 1\n",
-      "Image saved as Tensorflow\\workspace\\images\\collectedimages\\ZRTC-X\\ZRTC-X.ac9e2bca-ce1b-11ed-b8f9-44af2861d338.jpg\n",
-      "Collecting image number 2\n",
-      "Image saved as Tensorflow\\workspace\\images\\collectedimages\\ZRTC-X\\ZRTC-X.afb3eb66-ce1b-11ed-a100-44af2861d338.jpg\n",
-      "Collecting image number 3\n",
-      "Image saved as Tensorflow\\workspace\\images\\collectedimages\\ZRTC-X\\ZRTC-X.b2cb3d7b-ce1b-11ed-9730-44af2861d338.jpg\n",
-      "Collecting images for BLXTN-OK\n",
-      "Press 'r' to start image collection for BLXTN-OK\n",
-      "Collecting image number 1\n",
-      "Image saved as Tensorflow\\workspace\\images\\collectedimages\\BLXTN-OK\\BLXTN-OK.d90cf199-ce1b-11ed-a973-44af2861d338.jpg\n",
-      "Collecting image number 2\n",
-      "Image saved as Tensorflow\\workspace\\images\\collectedimages\\BLXTN-OK\\BLXTN-OK.dc2473b4-ce1b-11ed-b1fb-44af2861d338.jpg\n",
-      "Collecting image number 3\n",
-      "Image saved as Tensorflow\\workspace\\images\\collectedimages\\BLXTN-OK\\BLXTN-OK.df3bf069-ce1b-11ed-99e2-44af2861d338.jpg\n",
-      "Collecting images for BLXTN-X\n",
-      "Press 'r' to start image collection for BLXTN-X\n",
-      "Collecting image number 1\n",
-      "Image saved as Tensorflow\\workspace\\images\\collectedimages\\BLXTN-X\\BLXTN-X.eacfc94d-ce1b-11ed-be82-44af2861d338.jpg\n",
-      "Collecting image number 2\n",
-      "Image saved as Tensorflow\\workspace\\images\\collectedimages\\BLXTN-X\\BLXTN-X.ede89045-ce1b-11ed-94a1-44af2861d338.jpg\n",
-      "Collecting image number 3\n",
-      "Image saved as Tensorflow\\workspace\\images\\collectedimages\\BLXTN-X\\BLXTN-X.f0ffef20-ce1b-11ed-abc3-44af2861d338.jpg\n",
-      "Collecting images for BRKA-OK\n",
-      "Press 'r' to start image collection for BRKA-OK\n",
-      "Collecting image number 1\n",
-      "Image saved as Tensorflow\\workspace\\images\\collectedimages\\BRKA-OK\\BRKA-OK.233aa019-ce1c-11ed-ab2b-44af2861d338.jpg\n",
-      "Collecting image number 2\n",
-      "Image saved as Tensorflow\\workspace\\images\\collectedimages\\BRKA-OK\\BRKA-OK.26516a00-ce1c-11ed-a8aa-44af2861d338.jpg\n",
-      "Collecting image number 3\n",
-      "Image saved as Tensorflow\\workspace\\images\\collectedimages\\BRKA-OK\\BRKA-OK.296a7cae-ce1c-11ed-a6a1-44af2861d338.jpg\n",
-      "Collecting images for BRKA-X\n",
-      "Press 'r' to start image collection for BRKA-X\n",
-      "Collecting image number 1\n",
-      "Image saved as Tensorflow\\workspace\\images\\collectedimages\\BRKA-X\\BRKA-X.371fa849-ce1c-11ed-80e5-44af2861d338.jpg\n",
-      "Collecting image number 2\n",
-      "Image saved as Tensorflow\\workspace\\images\\collectedimages\\BRKA-X\\BRKA-X.3a36b596-ce1c-11ed-857c-44af2861d338.jpg\n",
-      "Collecting image number 3\n",
-      "Image saved as Tensorflow\\workspace\\images\\collectedimages\\BRKA-X\\BRKA-X.3d4dd75f-ce1c-11ed-ac59-44af2861d338.jpg\n",
-      "Collecting images for BSO-OK\n",
-      "Press 'r' to start image collection for BSO-OK\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Set frame dimensions\n",
     "frameWidth = 1024\n",
@@ -560,7 +471,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 5.0 splitting the image for each capsule (only if we want to the images further)"
+    "### 5.0 Crop and save the saved images (this is an optional feature)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Just skip to 6.0. Here we can crop the images we saved earlier and save them into a higlighted folder in their respective folder. This is an optional feature. tbf idk why i made this feature, but it is here if you want to use it because why not"
    ]
   },
   {
@@ -680,12 +599,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 6. Image Labelling using labelImg"
+    "### 6.0 Image Labelling using labelImg"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -694,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -705,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -717,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
