--- a/2.0 Split images to train-test.ipynb
+++ b/2.0 Split images to train-test.ipynb
@@ -7,7 +7,9 @@
    "source": [
     "## Usage Guide\n",
     "\n",
-    "This is designed to split a dataset of images and their corresponding XML files into training and testing sets. The dataset is organized into subfolders within a main data folder. If you have used the highlight feature before this please use the part 2 of the 2.1 version\n",
+    "This is designed to split a dataset of images and their corresponding XML files into training and testing sets. The dataset is organized into subfolders within a main data folder. If you only want to split the highlighted images use the part 2 of the 2.1 version.\n",
+    "\n",
+    "The Part 1 of the 2.1 version is honestly better but idk maybe some people want to see this one since this script does not consider that if you have already split the data and add new data into collected images file\n",
     "\n",
     "### Prerequisites\n",
     "\n",
