--- a/1.0 Image collection.ipynb
+++ b/1.0 Image collection.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,12 +41,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create a list of labels for the different classes\n",
-    "labels = ['PNDL-OK', 'PNDL-X', 'DFLM-OK', 'DFLM-X', 'ZRTC-OK','ZRTC-X', 'BLXTN-OK', 'BLXTN-X', 'BRKA-OK', 'BRKA-X']\n",
+    "labels = ['EDB', 'DB', 'BI-OK']\n",
     "\n",
     "# Specify the number of images to capture for each \n",
     "number_imgs = 5"
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -634,6 +634,77 @@
    "source": [
     "#Opens label image package\n",
     "!cd {LABELIMG_PATH} && python labelImg.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 7.0 Renaming the front part of images (unrelated)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " (just an additional feature)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Renamed E:\\DS\\tfod-01\\Tensortflow_object_detection-01\\Tensorflow\\workspace\\images\\collectedimages\\BLXTN-X\\BLXTN-X.abe11d38-ce1c-11ed-b00e-44af2861d338.jpg to E:\\DS\\tfod-01\\Tensortflow_object_detection-01\\Tensorflow\\workspace\\images\\collectedimages\\BLXTN-X\\DB.abe11d38-ce1c-11ed-b00e-44af2861d338.jpg\n",
+      "Renamed E:\\DS\\tfod-01\\Tensortflow_object_detection-01\\Tensorflow\\workspace\\images\\collectedimages\\BLXTN-X\\BLXTN-X.abe11d38-ce1c-11ed-b00e-44af2861d338.xml to E:\\DS\\tfod-01\\Tensortflow_object_detection-01\\Tensorflow\\workspace\\images\\collectedimages\\BLXTN-X\\DB.abe11d38-ce1c-11ed-b00e-44af2861d338.xml\n",
+      "Renamed E:\\DS\\tfod-01\\Tensortflow_object_detection-01\\Tensorflow\\workspace\\images\\collectedimages\\BLXTN-X\\BLXTN-X.c84d0831-ce91-11ed-b1e3-44af2861d338.jpg to E:\\DS\\tfod-01\\Tensortflow_object_detection-01\\Tensorflow\\workspace\\images\\collectedimages\\BLXTN-X\\DB.c84d0831-ce91-11ed-b1e3-44af2861d338.jpg\n",
+      "Renamed E:\\DS\\tfod-01\\Tensortflow_object_detection-01\\Tensorflow\\workspace\\images\\collectedimages\\BLXTN-X\\BLXTN-X.c84d0831-ce91-11ed-b1e3-44af2861d338.xml to E:\\DS\\tfod-01\\Tensortflow_object_detection-01\\Tensorflow\\workspace\\images\\collectedimages\\BLXTN-X\\DB.c84d0831-ce91-11ed-b1e3-44af2861d338.xml\n",
+      "Renamed E:\\DS\\tfod-01\\Tensortflow_object_detection-01\\Tensorflow\\workspace\\images\\collectedimages\\BLXTN-X\\BLXTN-X.cb4f9cc8-ce91-11ed-98dd-44af2861d338.jpg to E:\\DS\\tfod-01\\Tensortflow_object_detection-01\\Tensorflow\\workspace\\images\\collectedimages\\BLXTN-X\\DB.cb4f9cc8-ce91-11ed-98dd-44af2861d338.jpg\n",
+      "Renamed E:\\DS\\tfod-01\\Tensortflow_object_detection-01\\Tensorflow\\workspace\\images\\collectedimages\\BLXTN-X\\BLXTN-X.cb4f9cc8-ce91-11ed-98dd-44af2861d338.xml to E:\\DS\\tfod-01\\Tensortflow_object_detection-01\\Tensorflow\\workspace\\images\\collectedimages\\BLXTN-X\\DB.cb4f9cc8-ce91-11ed-98dd-44af2861d338.xml\n",
+      "Renamed E:\\DS\\tfod-01\\Tensortflow_object_detection-01\\Tensorflow\\workspace\\images\\collectedimages\\BLXTN-X\\BLXTN-X.ce52490c-ce91-11ed-b2b0-44af2861d338.jpg to E:\\DS\\tfod-01\\Tensortflow_object_detection-01\\Tensorflow\\workspace\\images\\collectedimages\\BLXTN-X\\DB.ce52490c-ce91-11ed-b2b0-44af2861d338.jpg\n",
+      "Renamed E:\\DS\\tfod-01\\Tensortflow_object_detection-01\\Tensorflow\\workspace\\images\\collectedimages\\BLXTN-X\\BLXTN-X.ce52490c-ce91-11ed-b2b0-44af2861d338.xml to E:\\DS\\tfod-01\\Tensortflow_object_detection-01\\Tensorflow\\workspace\\images\\collectedimages\\BLXTN-X\\DB.ce52490c-ce91-11ed-b2b0-44af2861d338.xml\n",
+      "Renamed E:\\DS\\tfod-01\\Tensortflow_object_detection-01\\Tensorflow\\workspace\\images\\collectedimages\\BLXTN-X\\BLXTN-X.d15742f1-ce91-11ed-b22f-44af2861d338.jpg to E:\\DS\\tfod-01\\Tensortflow_object_detection-01\\Tensorflow\\workspace\\images\\collectedimages\\BLXTN-X\\DB.d15742f1-ce91-11ed-b22f-44af2861d338.jpg\n",
+      "Renamed E:\\DS\\tfod-01\\Tensortflow_object_detection-01\\Tensorflow\\workspace\\images\\collectedimages\\BLXTN-X\\BLXTN-X.d15742f1-ce91-11ed-b22f-44af2861d338.xml to E:\\DS\\tfod-01\\Tensortflow_object_detection-01\\Tensorflow\\workspace\\images\\collectedimages\\BLXTN-X\\DB.d15742f1-ce91-11ed-b22f-44af2861d338.xml\n",
+      "Renamed E:\\DS\\tfod-01\\Tensortflow_object_detection-01\\Tensorflow\\workspace\\images\\collectedimages\\BLXTN-X\\BLXTN-X.d459ea5d-ce91-11ed-891f-44af2861d338.jpg to E:\\DS\\tfod-01\\Tensortflow_object_detection-01\\Tensorflow\\workspace\\images\\collectedimages\\BLXTN-X\\DB.d459ea5d-ce91-11ed-891f-44af2861d338.jpg\n",
+      "Renamed E:\\DS\\tfod-01\\Tensortflow_object_detection-01\\Tensorflow\\workspace\\images\\collectedimages\\BLXTN-X\\BLXTN-X.d459ea5d-ce91-11ed-891f-44af2861d338.xml to E:\\DS\\tfod-01\\Tensortflow_object_detection-01\\Tensorflow\\workspace\\images\\collectedimages\\BLXTN-X\\DB.d459ea5d-ce91-11ed-891f-44af2861d338.xml\n",
+      "Renamed E:\\DS\\tfod-01\\Tensortflow_object_detection-01\\Tensorflow\\workspace\\images\\collectedimages\\BLXTN-X\\BLXTN-X.ede89045-ce1b-11ed-94a1-44af2861d338.jpg to E:\\DS\\tfod-01\\Tensortflow_object_detection-01\\Tensorflow\\workspace\\images\\collectedimages\\BLXTN-X\\DB.ede89045-ce1b-11ed-94a1-44af2861d338.jpg\n",
+      "Renamed E:\\DS\\tfod-01\\Tensortflow_object_detection-01\\Tensorflow\\workspace\\images\\collectedimages\\BLXTN-X\\BLXTN-X.ede89045-ce1b-11ed-94a1-44af2861d338.xml to E:\\DS\\tfod-01\\Tensortflow_object_detection-01\\Tensorflow\\workspace\\images\\collectedimages\\BLXTN-X\\DB.ede89045-ce1b-11ed-94a1-44af2861d338.xml\n",
+      "Renamed E:\\DS\\tfod-01\\Tensortflow_object_detection-01\\Tensorflow\\workspace\\images\\collectedimages\\BLXTN-X\\BLXTN-X.f0ffef20-ce1b-11ed-abc3-44af2861d338.jpg to E:\\DS\\tfod-01\\Tensortflow_object_detection-01\\Tensorflow\\workspace\\images\\collectedimages\\BLXTN-X\\DB.f0ffef20-ce1b-11ed-abc3-44af2861d338.jpg\n",
+      "Renamed E:\\DS\\tfod-01\\Tensortflow_object_detection-01\\Tensorflow\\workspace\\images\\collectedimages\\BLXTN-X\\BLXTN-X.f0ffef20-ce1b-11ed-abc3-44af2861d338.xml to E:\\DS\\tfod-01\\Tensortflow_object_detection-01\\Tensorflow\\workspace\\images\\collectedimages\\BLXTN-X\\DB.f0ffef20-ce1b-11ed-abc3-44af2861d338.xml\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "\n",
+    "def rename_files_in_directory(path, old_prefix, new_prefix):\n",
+    "    for filename in os.listdir(path):\n",
+    "        if filename.startswith(old_prefix) and (filename.endswith('.jpg') or filename.endswith('.xml')):\n",
+    "            new_filename = filename.replace(old_prefix, new_prefix, 1)\n",
+    "            old_filepath = os.path.join(path, filename)\n",
+    "            new_filepath = os.path.join(path, new_filename)\n",
+    "            os.rename(old_filepath, new_filepath)\n",
+    "            print(f\"Renamed {old_filepath} to {new_filepath}\")\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    folder_path = r\"E:\\DS\\tfod-01\\Tensortflow_object_detection-01\\Tensorflow\\workspace\\images\\collectedimages\\BLXTN-X\"  # Replace this with the path to your folder\n",
+    "    old_initial_part = \"BLXTN-X\"\n",
+    "    new_initial_part = \"DB\"  # Replace this with the new initial part you want\n",
+    "\n",
+    "    rename_files_in_directory(folder_path, old_initial_part, new_initial_part)\n"
    ]
   },
   {
