--- a/2.1 split images (alternative).ipynb
+++ b/2.1 split images (alternative).ipynb
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,9 +144,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Copying train images from BLXTN-OK: 100%|██████████| 4/4 [00:00<00:00, 136.02it/s]\n",
+      "Copying test images from BLXTN-OK: 100%|██████████| 1/1 [00:00<00:00, 199.61it/s]\n",
+      "Copying train images from BLXTN-X: 100%|██████████| 4/4 [00:00<00:00, 194.28it/s]\n",
+      "Copying test images from BLXTN-X: 100%|██████████| 1/1 [00:00<00:00, 221.36it/s]\n",
+      "Copying train images from BRKA-OK: 100%|██████████| 4/4 [00:00<00:00, 257.91it/s]\n",
+      "Copying test images from BRKA-OK: 100%|██████████| 1/1 [00:00<00:00, 221.69it/s]\n",
+      "Copying train images from BRKA-X: 100%|██████████| 4/4 [00:00<00:00, 234.97it/s]\n",
+      "Copying test images from BRKA-X: 100%|██████████| 1/1 [00:00<00:00, 250.02it/s]\n",
+      "Copying train images from DFLM-OK: 100%|██████████| 4/4 [00:00<00:00, 171.60it/s]\n",
+      "Copying test images from DFLM-OK: 100%|██████████| 1/1 [00:00<00:00, 142.88it/s]\n",
+      "Copying train images from DFLM-X: 100%|██████████| 4/4 [00:00<00:00, 163.35it/s]\n",
+      "Copying test images from DFLM-X: 100%|██████████| 1/1 [00:00<00:00, 116.24it/s]\n",
+      "Copying train images from PNDL-OK: 100%|██████████| 4/4 [00:00<00:00, 249.38it/s]\n",
+      "Copying test images from PNDL-OK: 100%|██████████| 1/1 [00:00<00:00, 249.99it/s]\n",
+      "Copying train images from PNDL-X: 100%|██████████| 4/4 [00:00<00:00, 166.29it/s]\n",
+      "Copying test images from PNDL-X: 100%|██████████| 1/1 [00:00<00:00, 133.33it/s]\n",
+      "Copying train images from ZRTC-OK: 100%|██████████| 4/4 [00:00<00:00, 173.69it/s]\n",
+      "Copying test images from ZRTC-OK: 100%|██████████| 1/1 [00:00<00:00, 250.11it/s]\n",
+      "Copying train images from ZRTC-X: 100%|██████████| 4/4 [00:00<00:00, 226.69it/s]\n",
+      "Copying test images from ZRTC-X: 100%|██████████| 1/1 [00:00<00:00, 142.63it/s]\n",
+      "INFO:root:Successfully split and copied images and XML files to train and test folders.\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import shutil\n",
